# academic-pdf-processor

./: .gitignore  BUILD-PROMPT.md  LICENSE  PLAN.md  PRD-academic-pdf-processor.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh
apdf/: __init__.py  batch.py  config.py  converter.py  detect.py  job.py  processor.py  progress.py
apdf/serializers/: __init__.py  elements.py  html_serializer.py  json_serializer.py  markdown_serializer.py
apdf/ui/: __init__.py  main_window.py
tests/: test_detect.py  test_processor_integration.py
tests/fixtures/: sample.tex
